tests/diag/int_float_mix.ty
fn main():
    x := 3
    y := 2.0
    println(str(x / y))
